[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/ui/dialogue/dialogue.gd" type="Script" id=1]
[ext_resource path="res://fonts/main_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/fsm/fsm.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/ui/dialogue/states/appearing.gd" type="Script" id=4]
[ext_resource path="res://scripts/ui/dialogue/states/writing.gd" type="Script" id=5]
[ext_resource path="res://scripts/ui/dialogue/states/written.gd" type="Script" id=6]
[ext_resource path="res://scripts/ui/dialogue/states/disappearing.gd" type="Script" id=7]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float fade_amount;

void fragment()
{
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, 1.0 * fade_amount).rgb * (1.0 - fade_amount * 0.4);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/fade_amount = null

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0, 0, 0, 1 )
border_color = Color( 0.929688, 0.188843, 0.188843, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0, 0, 0, 0.403294 )
draw_center = false
border_color = Color( 0, 0, 0, 0 )
shadow_color = Color( 0, 0, 0, 0.0828627 )
shadow_size = 15

[node name="dialogue" type="PanelContainer"]
pause_mode = 2
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 1 )

[node name="faders" type="Control" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 318.0
margin_bottom = 238.0

[node name="fancy_borders" type="Panel" parent="faders"]
mouse_filter = 1
custom_styles/panel = SubResource( 4 )

[node name="label" type="Label" parent="faders"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
size_flags_vertical = 7
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.265176 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 0
text = "this is some test text"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="button" type="TextureButton" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 318.0
margin_bottom = 238.0
rect_min_size = Vector2( 0, 5 )
expand = true
stretch_mode = 5

[node name="diag_state" parent="." instance=ExtResource( 3 )]

[node name="appearing" type="Node" parent="diag_state"]
script = ExtResource( 4 )

[node name="tween" type="Tween" parent="diag_state/appearing"]

[node name="writing" type="Node" parent="diag_state"]
script = ExtResource( 5 )

[node name="written" type="Node" parent="diag_state"]
script = ExtResource( 6 )

[node name="timer" type="Timer" parent="diag_state/written"]
wait_time = 14.0

[node name="disappearing" type="Node" parent="diag_state"]
script = ExtResource( 7 )

[node name="tween" type="Tween" parent="diag_state/disappearing"]
[connection signal="pressed" from="button" to="." method="_on_Button_pressed"]
[connection signal="tween_completed" from="diag_state/appearing/tween" to="diag_state/appearing" method="_on_tween_tween_completed"]
[connection signal="tween_completed" from="diag_state/disappearing/tween" to="diag_state/disappearing" method="_on_tween_tween_completed"]
